--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <html>
-<header><title>This is title</title></header>
+<header><title>Martin Hudobivnik</title></header>
 <body>
-Hello world
+Hello. Website coming in mid september.
 </body>
 </html>
