--- a/cloudpano/index.html
+++ b/cloudpano/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 02 2018 18:36:18 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Nov 02 2018 19:25:49 GMT+0000 (UTC)  -->
 <html data-wf-page="5bb7273133a1cdd6325ba7e4" data-wf-site="5b97a5618f2b57623460fd44">
 <head>
   <meta charset="utf-8">
@@ -55,23 +55,8 @@
             </div>
           </a>
         </div>
-        <div class="div-block-13"><img src="images/TouchMove.png" width="150" alt="" class="tooltip">
-          <div id="headerScreen" class="screen">
-            <div class="w-embed w-script">
-              <script>
-var panorama, viewer;
-										panorama = new PANOLENS.ImagePanorama( 'images/1.jpg' );
-										viewer = new PANOLENS.Viewer({container: document.querySelector('#headerScreen'), controlBar:false});
-										viewer.add( panorama );
-										viewer.getControl().autoRotateSpeed = .1;
-										viewer.getControl().autoRotate = true;
-										viewer.getControl().noZoom = true;
-									var width = document.getElementById("headerScreen").offsetWidth;
-								var height = document.getElementById("headerScreen").offsetHeight;
-							  viewer.onWindowResize( width, height );
-</script>
-              <canvas width="1354" height="764" class="panolens-canvas" style="width: 677px; height: 382px; display: block;"></canvas></div>
-          </div><img src="images/iphone-silver.png" width="877" srcset="images/iphone-silver-p-500.png 500w, images/iphone-silver-p-800.png 800w, images/iphone-silver-p-1080.png 1080w, images/iphone-silver-p-1600.png 1600w, images/iphone-silver.png 1754w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 93vw, 877px" alt="" class="image-5"></div>
+        <div class="div-block-13">
+          <div id="headerScreen" class="screen"></div><img src="images/iphone-silver.png" width="877" srcset="images/iphone-silver-p-500.png 500w, images/iphone-silver-p-800.png 800w, images/iphone-silver-p-1080.png 1080w, images/iphone-silver-p-1600.png 1600w, images/iphone-silver.png 1754w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 93vw, 877px" alt="" class="image-5"></div>
       </div>
     </div>
     <header id="About" class="about">
@@ -128,7 +113,7 @@ var panorama, viewer;
       </div>
     </div>
     <div class="section2">
-      <div class="div-block-8"><img src="images/TouchMoveSmall.png" width="112" alt="" class="image-11"><img src="images/right.png" width="178" alt="" class="image-10"><img src="images/Left.png" width="213" alt="" class="image-9"><img src="images/iphone-jet-black.png" width="244" alt="" class="image-8"><img src="images/iphone-silver2.png" width="203" alt="" class="image-7"></div>
+      <div class="div-block-8"><img src="images/right.png" width="178" alt="" class="image-10"><img src="images/Left.png" width="213" alt="" class="image-9"><img src="images/iphone-jet-black.png" width="244" alt="" class="image-8"><img src="images/iphone-silver2.png" width="203" alt="" class="image-7"></div>
       <div class="div-block-7">
         <div class="text-block">Share in Full 360 and VR</div>
         <h3 class="heading-3">Share and display on any smart device out of the box - no app required<br></h3>
