--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 02 2018 21:38:17 GMT+0000 (UTC)  -->
-<html data-wf-page="5bdc09758dd3c23569e69f6e" data-wf-site="5b8d4997926fc66934260497">
+<!--  Last Published: Fri Nov 02 2018 08:18:31 GMT+0000 (UTC)  -->
+<html data-wf-page="5bdc033c125f0b1a7219b628" data-wf-site="5b8d4997926fc66934260497">
 <head>
   <meta charset="utf-8">
   <title>Martin Hudobivnik UI/UX Portfolio</title>
@@ -27,9 +27,7 @@
     <div class="s-menu">
       <a href="index.html" class="link-block-6 w-inline-block w--current">
         <div class="s-logo">MARTIN HUDOBIVNIK</div>
-      </a>
-      <div class="div-block-10"><a href="mailto:martin@hudobivnik.si?subject=Work%20Inquiry" class="s-link-contact w-inline-block"><img src="images/Combined-Shape.svg" alt="" class="s-contact-image"></a></div>
-    </div>
+      </a><a href="mailto:martin@hudobivnik.si?subject=Work%20Inquiry" class="s-link-contact w-inline-block"><img src="images/Combined-Shape.svg" alt="" class="s-contact-image"></a></div>
     <div class="s-title-box">
       <h1 class="s-title">I help businesses visualize ideas and present them in a functional design. Sometimes I even code a tiny bit.</h1>
     </div>
@@ -86,7 +84,7 @@
     </div>
   </div>
   <div class="s-animation">
-    <div class="div-block-3 left"><img src="images/Image1_1.png" srcset="images/Image1_1-p-500.png 500w, images/Image1_1.png 720w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, 29vw" alt="" class="image"></div>
+    <div class="div-block-3 left"><img src="images/Image1.png" srcset="images/Image1-p-500.png 500w, images/Image1.png 720w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, 29vw" alt="" class="image"></div>
     <div class="div-block-4"><img src="images/Image2.png" srcset="images/Image2-p-500.png 500w, images/Image2.png 720w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, 29vw" alt="" class="image-2"></div>
     <div class="div-block-5 right"><img src="images/Image3.png" srcset="images/Image3-p-500.png 500w, images/Image3.png 720w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, 29vw" alt="" class="image-3"></div>
   </div>
