--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 class="heading">I’m Martin Hudobivnik, designer, webflow expert and endurance sport enthusiast from beautiful Slovenia.</h1>
       <div>
         <a href="https://madebylumen.com" class="link w-inline-block">
-          <div class="text-block">Founder and CEO at Made By Lumen</div>
+          <div class="text-block">Founder at Made By Lumen</div>
           <div class="arrow-block"><img src="images/arrow-orange.svg" loading="lazy" alt="" class="arrow-orange-over"><img src="images/arrow-orange.svg" loading="lazy" alt="" class="arrow-orange"><img src="images/arrow-grey.svg" loading="lazy" alt="" class="arrow-grey one"></div>
         </a>
         <a href="https://webflow.com/templates/designers/martin-hudobivnik" target="_blank" class="link w-inline-block">
